# EmbeddedCMake

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  EmbeddedCMake.ioc  README.md  STM32F746ZGTX_FLASH.ld  STM32F746ZGTX_RAM.ld
Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
cmake/: arm_arch.cmake  arm_clang.cmake
